# AgentsFlow

./: .gitignore  AGENTS.md  CONTENTS.md  Makefile  README.md  pyproject.toml
docs/: actor-model.md  architecture.md  bdd-style-guide.md  behavior-binding-model.md  cmake-fetchcontent-application-pattern.md  design-review-agenda.md  enforcement-boundary.md  external-reviewer-provider-model.md  gate-executability-model.md  human-interaction-protocol.md  legacy-agent-system-adoption-model.md  mvp-ready-workflow-standard.md  philosophy.md  pr-merge-readiness.md  project-application-model.md  project-binding-model.md  project-initialization-model.md  review-agent-interaction-protocol.md  review-artifact-preparation.md  review-control-model.md  review-fusion-model.md  review-profile-model.md  review-prompt-contract.md  risk-and-strictness.md  run-artifact-curation.md  script-contract.md  skill-contract.md  specification-and-plan-mode.md  specification-development-roadmap.md  task-contract-model.md  workflow-model.md  workflow-phase-schema.md  workflow-taxonomy.md
gates/: adr_candidate_gate.yaml  contract_gate.yaml  contract_seed_gate.yaml  evidence_gate.yaml  fusion_gate.yaml  impact_gate.yaml  plan_gate.yaml  problem_framing_gate.yaml  project_initialization_gate.yaml  regression_gate.yaml  scope_gate.yaml  spec_review_gate.yaml  target_workflow_readiness_gate.yaml  verification_gate.yaml
schemas/: active-instruction-map.schema.json  actor.schema.json  behavior-binding.schema.json  evidence-probe-report.schema.json  external-review-lite-invocation.schema.json  (+35 more)
(+586 files in other folders)
