[project]
name = "agentsflow"
version = "0.1.13"
description = "Modular workflow toolkit for controlled agent-assisted development."
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = ["PyYAML", "pytest", "jsonschema"]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
